k8s/homelab/core/monitoring/manifests/prometheusOperator/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-options: ""
    argocd.argoproj.io/sync-wave: "5"
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: prometheus-operator
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.93.1
  name: prometheus-operator
  namespace: monitoring
spec:
  clusterIP: None
  ports:
    - name: https
      port: 8443
      targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: prometheus-operator
    app.kubernetes.io/part-of: kube-prometheus
